# wecom_worktool

./: .gitignore  pyproject.toml  readme.md  worktool.py
src/wecom_worktool/: __init__.py
